--- a/composer.json
+++ b/composer.json
@@ -1,23 +1,27 @@
 {
-    "name": ":vendor_slug/:package_slug",
-    "description": ":package_description",
+    "name": "musamba/red-thread",
+    "description": "Red Thread is a laravel package that helps you easily list all relationships within a given model.",
+    "type": "library",
+    "version": "0.0.1",
     "keywords": [
-        ":vendor_name",
+        "models",
+        "musamba",
         "laravel",
-        ":package_slug"
+        "eloquent",
+        "red-thread",
+        "relationships"
     ],
-    "homepage": "https://github.com/:vendor_slug/:package_slug",
+    "homepage": "https://github.com/Musamba24/red-thread",
     "license": "MIT",
     "authors": [
         {
-            "name": ":author_name",
-            "email": "author@domain.com",
+            "name": "Andrea Musmarra",
+            "email": "amusmarra@ymail.com",
             "role": "Developer"
         }
     ],
     "require": {
         "php": "^8.1",
-        "spatie/laravel-package-tools": "^1.14.0",
         "illuminate/contracts": "^10.0"
     },
     "require-dev": {
@@ -35,13 +39,12 @@
     },
     "autoload": {
         "psr-4": {
-            "VendorName\\Skeleton\\": "src/",
-            "VendorName\\Skeleton\\Database\\Factories\\": "database/factories/"
+            "Musamba24\\RedThread\\": "src/"
         }
     },
     "autoload-dev": {
         "psr-4": {
-            "VendorName\\Skeleton\\Tests\\": "tests/",
+            "Musamba24\\RedThread\\Tests\\": "tests/",
             "Workbench\\App\\": "workbench/app/"
         }
     },
@@ -73,10 +76,10 @@
     "extra": {
         "laravel": {
             "providers": [
-                "VendorName\\Skeleton\\SkeletonServiceProvider"
+                "Musamba24\\RedThread\\RedThreadServiceProvider"
             ],
             "aliases": {
-                "Skeleton": "VendorName\\Skeleton\\Facades\\Skeleton"
+                "RedThread": "Musamba24\\RedThread\\Facades\\RedThread"
             }
         }
     },
