--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,6 @@
     "name": "musamba/red-thread",
     "description": "Red Thread is a laravel package that helps you easily list all relationships within a given model.",
     "type": "library",
-    "version": "0.0.1",
     "keywords": [
         "models",
         "musamba",
@@ -24,17 +23,10 @@
         "php": "^8.1"
     },
     "require-dev": {
-        "laravel/pint": "^1.0",
-        "nunomaduro/collision": "^7.8",
-        "larastan/larastan": "^2.0.1",
         "orchestra/testbench": "^8.8",
         "pestphp/pest": "^2.20",
         "pestphp/pest-plugin-arch": "^2.5",
-        "pestphp/pest-plugin-laravel": "^2.0",
-        "phpstan/extension-installer": "^1.1",
-        "phpstan/phpstan-deprecation-rules": "^1.0",
-        "phpstan/phpstan-phpunit": "^1.0",
-        "spatie/laravel-ray": "^1.26"
+        "pestphp/pest-plugin-laravel": "^2.0"
     },
     "autoload": {
         "psr-4": {
